--- a/assignments/index.html
+++ b/assignments/index.html
@@ -9,7 +9,7 @@
   <title>JS III</title>
 
   <script src="this.js"></script>
-  <!-- <script src="prototypes.js"></script> -->
+  <script src="prototypes.js"></script>
 </head>
 
 <body>
